test/files/events-neg/abstract-no-type.check
abstract-no-type.scala:3: error: abstract and imperative events must have type declaration
}
^
one error found
