test/files/events-neg/abstract-no-type.scala
abstract class C {
  evt e
}

// vim: set ts=4 sw=4 et:
